--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,6 @@ android {
 }
 
 dependencies {
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -59,7 +58,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "com.github.moxy-community:moxy:2.1.2"
     kapt "com.github.moxy-community:moxy-compiler:2.1.2"
-    implementation 'ru.terrakok.cicerone:cicerone:5.0.0'
+    implementation 'com.github.terrakok:cicerone:6.6'
     implementation "com.github.moxy-community:moxy-androidx:2.1.2"
     implementation "com.github.moxy-community:moxy-ktx:2.1.2"
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
